push to remote orgin

--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -2,6 +2,7 @@
 When would be a good time to use an array instead of an object, and vice versa? Please provide examples.
 
 # Answer
+You use array when you care about the order of the elements, you use object when you can access the element by referencing the name. For example you can store people's name into a array to as people come into the room. So if you want to know who was the first person come in, you just get the element at index 0. If you want to put all the student name with ID number, when you want to get the student ID you can just use their name to get the ID number.
 
 
 # Teacher Feedback
