--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -2,6 +2,6 @@
 What does it mean when we say something is "pass by reference" vs "pass by value." Which one is mutable?
 
 # Answer
-
+Pass by reference is when you only passing the reference of the location into another variable. Pass by value is passing the value into another variable which assign the value to the new variable. Pass by value is mutable. 
 
 # Teacher Feedback
