--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -2,6 +2,7 @@
 What is a "shallow" clone, and why can it cause bugs?
 
 # Answer
+Shallow copying refers to the process of creating a new object that is a copy of an existing object, with its properties referencing the same values or objects as the original. It will lead an unexpected change on the orginal object. Therefore, if the original object has nested objects, changes to these nested objects will affect both the original and copied objects. This can lead to unexpected results and bugs in your code.
 
 
 # Teacher Feedback
