--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -12,6 +12,6 @@ What is JSON? Why isn't the example below valid JSON?
 ```
 
 # Answer
-
+JSON stands for JavaScript Object Notation. JSON is a lightweight format for storing and transporting data. The example didn't put the key to be in string. In JSON, property names must be enclosed in double quotes. 
 
 # Teacher Feedback
